New client code packaging (doesn't depend on server files)